2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fshelp.c (grub_fshelp_read_file): Don't attempt to read
	past the end of file.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/lexer.c (grub_script_lexer_yywrap): Update len
	synchronously with line.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace explicit sizeof divisions by ARRAY_SIZE.

2015-01-19  Kris Moore <kris@pcbsd.org>

	* grub-core/disk/geli.c: Support GELI v6 and v7.

2014-12-09  Andrei Borzenkov  <arvidjaar@gmail.com>

	* grub-core/term/serial.c (grub_cmd_serial): Fix --rtscts
	option processing.

2014-12-07  David Kozub  <zub.272@gmail.com>

	* grub-core/kern/arm/misc.S: fix unaligned 64bit local variable
	in __aeabi_uidivmod
	Fixes Savannah bug #43632.

2014-12-07  Peter Nelson <peterdn>

	* grub-core/fs/ext2.c (grub_ext2_read_block): Support large sparse
	chunks.

2014-12-07  Andrei Borzenkov  <arvidjaar@gmail.com>

	* util/grub-mkconfig_lib.in (version_test_gt): Remove redundant
	non-portable '-n' echo option.
	* util/grub.d/10_kfreebsd.in: Change how list is built to avoid
	non-portable 'echo -n.
	* util/grub.d/10_linux.in: Likewise (closes 43668).
	* util/grub.d/20_linux_xen.in: Likewise.
	* util/grub.d/30_os-prober.in: Print spaces directly to avoid
	non-portable 'echo -n'.

2014-12-07  Curtis Larsen <larsen@dixie.edu>

	* grub-core/net/tcp.c (grub_net_recv_tcp_packet): Fix double
	free when multiple empty segments were received (closes 42765).

2014-12-05  Andrei Borzenkov  <arvidjaar@gmail.com>

	* tests/util/grub-shell.in: Support --files also for netboot.
	* tests/file_filter_test.in: New file with file filters tests.
	* Makefile.util.def: Add file_filter_test.
	* conf/Makefile.extra-dist: ... and here.
	* tests/file_filter/file.gz: Test file for file_filter_test.
	* tests/file_filter/file.gz.sig: Likewise.
	* tests/file_filter/file.lzop: Likewise.
	* tests/file_filter/file.lzop.sig: Likewise.